--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       предоставляем высококачественные услуги авторемонта и технического
       обслуживания для всех типов автомобилей. Наша команда опытных специалистов
       гарантирует надежность и качество выполнения работ. Мы ценим каждого
-      клиента и стремимся к честной и прозрачной работе."
+      клиента и стремимся к честной и прозрачной работе"
     />
     <meta
       name="keywords"
@@ -108,7 +108,7 @@
                 жизнь на дорогах. Кроме того, мы предлагаем широкий спектр
                 дополнительных услуг, включая установку аксессуаров,
                 профилактическое обслуживание и консультации по техническому
-                обслуживанию.
+                обслуживанию
               </p>
               <img
                 class="md-img container-about"
